fix: navigation & other alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ main{
     content: "";
     position: absolute;
     top: 0;
-    width: 50%;
+    width: 8rem;
     left: 0;
     height: 3px;
     border-radius: 2px;
@@ -131,7 +131,7 @@ main{
     position: absolute;
     font-size: 0.8rem;
     line-height: 1;
-    left: 52%;
+    left: 8.5rem;
     top: -6px;
     height: fit-content;
     text-transform: uppercase;
@@ -153,7 +153,7 @@ main{
 /* Gradient Button */ 
 button.btn-outline-light.gradient {
     box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
-    border: solid 3px transparent;
+    border: solid 2px transparent;
     background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), var(--text-gradient);
     background-origin: border-box;
     background-clip: content-box, border-box;
@@ -162,7 +162,7 @@ button.btn-outline-light.gradient {
   
 button.btn-outline-light.gradient:hover {
     box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
-    border: solid 3px transparent;
+    border: solid 2px transparent;
     background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), var(--text-gradient);
     background-origin: border-box;
     background-clip: content-box, border-box;
@@ -327,6 +327,12 @@ button.btn-outline-light.gradient:hover {
     column-gap: 2rem;
     min-height: 50vh;
 }
+.custom-grid .card{
+    border-radius: 2rem;
+}
+.custom-grid .card-body{
+    border-radius: 0 0 2rem 2rem;
+}
 /* .grid-left{
     
 } */
@@ -348,6 +354,7 @@ button.btn-outline-light.gradient:hover {
 }
 .card > img{
     object-fit: cover;
+    border-radius: 2rem;
 }
 
 .service__grid{
@@ -412,6 +419,12 @@ button.btn-outline-light.gradient:hover {
         max-width: 100vw;
         border-radius: none;
         margin: 0;
+    }
+    .title::before {
+        width: 7rem;  
+    }
+    .title::after {
+        left: 7.5rem;
     }
     #hero{
         background-size: 120%;
